<resources>
    <string name="app_name">gimnasio</string>
    <string name="enviar_resultados">Enviar resultados</string>
    <string name="nombre_del_ejercicio">Nombre del ejercicio</string>

    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="mi_rcoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="s_bado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="a_adir_ejercicio">Añadir Nuevo ejercicio</string>
    <string name="eliminar_ejercicio">Eliminar ejercicio</string>
    <string name="a_adir_Rutina">Añadir Rutina</string>

    <string name="volver">Volver</string>
    <string name="peso_kg">Peso (kg)</string>
    <string name="reps">Reps</string>
    <string name="peso_1">Peso 1</string>
    <string name="peso_2">Peso 2</string>
    <string name="peso_3">Peso 3</string>
    <string name="peso_4">Peso 4</string>
    <string name="peso_5">Peso 5</string>
    <string name="mostrar_lista_de_ejercicios">Mostrar Lista de Ejercicios</string>
    <string name="guardar_selecci_n">Guardar selección</string>
    <string name="reps_1">Reps 1</string>
    <string name="reps_2">Reps 2</string>
    <string name="reps_3">Reps 3</string>
    <string name="reps_4">Reps 4</string>
    <string name="reps_5">Reps 5</string>
    <string name="pesos_kg">Pesos (kg)</string>
    <string name="salir">Salir</string>
    <string name="borrar">Borrar</string>
    <string name="selecciona_un_ejercicio">Selecciona un ejercicio:</string>
</resources>